<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.aman.ui.fragments.DashboardFragment"
        android:label="@string/dashboard" />

    <fragment
        android:id="@+id/goalsFragment"
        android:name="com.example.aman.ui.fragments.GoalsFragment"
        android:label="@string/goals" />

    <fragment
        android:id="@+id/adviceFragment"
        android:name="com.example.aman.ui.fragments.AdviceFragment"
        android:label="@string/advice" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.aman.ui.fragments.ProfileFragment"
        android:label="@string/profile" />

</navigation>